force-app/main/default/objects/ConsolCNTR__c/ConsolCNTR__c.object-meta.xml
<CustomObject>
    <label>Job Container</label>
    <nameField>
        <displayFormat>CSC-{00000}</displayFormat>
        <label>Job Container ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Containers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>