force-app/main/default/objects/ConsolCNTR__c/fields/AdvancedShipment__c.field-meta.xml
<CustomField>
    <fullName>AdvancedShipment__c</fullName>
    <label>Advanced Shipment</label>
    <referenceTo>AdvancedShipment__c</referenceTo>
    <relationshipName>Consol_CNTR</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>