force-app/main/default/objects/ConsolCNTR__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <formula>AdvancedShipment__r.MAgent__r.Name</formula>
    <label>Agent</label>
    <type>Text</type>
</CustomField>