force-app/main/default/objects/ConsolCNTR__c/fields/BavetDepotDropoff__c.field-meta.xml
<CustomField>
    <fullName>BavetDepotDropoff__c</fullName>
    <label>Bavet Depot Drop-off</label>
    <type>TextArea</type>
</CustomField>