force-app/main/default/objects/ConsolCNTR__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <formula>AdvancedShipment__r.Master_Consolidator_Carrier__r.Name</formula>
    <label>Carrier</label>
    <type>Text</type>
</CustomField>