force-app/main/default/objects/ConsolCNTR__c/fields/CD_No__c.field-meta.xml
<CustomField>
    <fullName>CD_No__c</fullName>
    <label>CD No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>