force-app/main/default/objects/ConsolCNTR__c/fields/CombinedDEMDETdays__c.field-meta.xml
<CustomField>
    <fullName>CombinedDEMDETdays__c</fullName>
    <formula>Vendor__r.CombinedDEMDETdays__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Combined DEM&amp;DET (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>