force-app/main/default/objects/ConsolCNTR__c/fields/CombinedDEMDETDeadline__c.field-meta.xml
<CustomField>
    <fullName>CombinedDEMDETDeadline__c</fullName>
    <formula>CombinedDEMDETDuration__c  +  ETA__c</formula>
    <label>Combined DEM&amp;DET Deadline</label>
    <type>Date</type>
</CustomField>