force-app/main/default/objects/ConsolCNTR__c/fields/CombinedDEMDETDuration__c.field-meta.xml
<CustomField>
    <fullName>CombinedDEMDETDuration__c</fullName>
    <label>Combined DEM&amp;DET Duration</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>