force-app/main/default/objects/ConsolCNTR__c/fields/Container_Copy_Status__c.field-meta.xml
<CustomField>
    <fullName>Container_Copy_Status__c</fullName>
    <label>Container Copy Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Yet Processed</fullName>
            </value>
            <value>
                <fullName>Processing Requested</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>