force-app/main/default/objects/ConsolCNTR__c/fields/Container_Summary__c.field-meta.xml
<CustomField>
    <fullName>Container_Summary__c</fullName>
    <formula>&apos;Cont Type: &apos;+TEXT(  Container_Type__c  )+&apos;| Cont Number: &apos;+  Container_Number__c  +&apos;| Seal No: &apos;+  Seal_Number__c  +&apos;| Cargo Quantity: &apos;+ TEXT( Cargo_Quantity__c )+&apos; &apos;+ TEXT( Cargo_Unit__c )+&apos;(s)&apos; +&apos;| G.W: &apos;+ TEXT( Gross_WeightKg__c ) +&apos; Kg&apos;+&apos;| CBM: &apos;+ TEXT( MeasurementCBM__c )</formula>
    <label>Container Summary</label>
    <type>Text</type>
</CustomField>