force-app/main/default/objects/ConsolCNTR__c/fields/Container_Type__c.field-meta.xml
<CustomField>
    <fullName>Container_Type__c</fullName>
    <label>Container Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20&apos;DC</fullName>
            </value>
            <value>
                <fullName>20&apos;HC</fullName>
            </value>
            <value>
                <fullName>40&apos;DC</fullName>
            </value>
            <value>
                <fullName>45&apos;DC</fullName>
            </value>
            <value>
                <fullName>40&apos;HC</fullName>
            </value>
            <value>
                <fullName>45&apos;HC</fullName>
            </value>
            <value>
                <fullName>20&apos;RF</fullName>
            </value>
            <value>
                <fullName>40&apos;RF</fullName>
            </value>
            <value>
                <fullName>45&apos;RF</fullName>
            </value>
            <value>
                <fullName>20&apos;OT</fullName>
            </value>
            <value>
                <fullName>40&apos;OT</fullName>
            </value>
            <value>
                <fullName>45&apos;OT</fullName>
            </value>
            <value>
                <fullName>20&apos;FR</fullName>
            </value>
            <value>
                <fullName>40&apos;FR</fullName>
            </value>
            <value>
                <fullName>Bulk</fullName>
            </value>
            <value>
                <fullName>ISO</fullName>
            </value>
            <value>
                <fullName>20&apos;IMO</fullName>
            </value>
            <value>
                <fullName>40&apos;IMO</fullName>
            </value>
            <value>
                <fullName>45&apos;IMO</fullName>
            </value>
            <value>
                <fullName>20&apos;DC-Flexi</fullName>
            </value>
            <value>
                <fullName>AIR</fullName>
            </value>
            <value>
                <fullName>CBM</fullName>
            </value>
            <value>
                <fullName>RTON</fullName>
            </value>
            <value>
                <fullName>2*20&apos;DC</fullName>
                <isActive>false</isActive>
                <label>2*20&apos;DC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>