force-app/main/default/objects/ConsolCNTR__c/fields/ContainerStatus__c.field-meta.xml
<CustomField>
    <fullName>ContainerStatus__c</fullName>
    <label>Container Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
                <default>true</default>
                <label>Created</label>
            </value>
            <value>
                <fullName>Waiting for Pick-up</fullName>
            </value>
            <value>
                <fullName>Transported to Warehouse</fullName>
            </value>
            <value>
                <fullName>Cargo Stuffing</fullName>
            </value>
            <value>
                <fullName>In use</fullName>
            </value>
            <value>
                <fullName>Cargo Unloading</fullName>
            </value>
            <value>
                <fullName>Empty Container Return</fullName>
            </value>
            <value>
                <fullName>Container Returned</fullName>
                <isActive>false</isActive>
                <label>Container Returned</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>