force-app/main/default/objects/ConsolCNTR__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <formula>AdvancedShipment__r.Customer__r.Name</formula>
    <label>Customer</label>
    <type>Text</type>
</CustomField>