force-app/main/default/objects/ConsolCNTR__c/fields/DEMDeadline__c.field-meta.xml
<CustomField>
    <fullName>DEMDeadline__c</fullName>
    <formula>ETA__c + DEMDuration__c</formula>
    <label>DEM Deadline</label>
    <type>Date</type>
</CustomField>