force-app/main/default/objects/ConsolCNTR__c/fields/DEMDuration__c.field-meta.xml
<CustomField>
    <fullName>DEMDuration__c</fullName>
    <label>DEM Duration</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>