force-app/main/default/objects/ConsolCNTR__c/fields/DEMFreeTimeDurationdays__c.field-meta.xml
<CustomField>
    <fullName>DEMFreeTimeDurationdays__c</fullName>
    <formula>Vendor__r.DEMFreeTimeDurationdays__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEM-Free Time Duration (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>