force-app/main/default/objects/ConsolCNTR__c/fields/DETDeadline__c.field-meta.xml
<CustomField>
    <fullName>DETDeadline__c</fullName>
    <formula>ActualContainerPickupDate__c + DETDuration__c</formula>
    <label>DET Deadline</label>
    <type>Date</type>
</CustomField>