force-app/main/default/objects/ConsolCNTR__c/fields/DETDeadlineReached__c.field-meta.xml
<CustomField>
    <fullName>DETDeadlineReached__c</fullName>
    <formula>DETDeadline__c - TODAY() &lt;= 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DET Deadline Reached</label>
    <type>Checkbox</type>
</CustomField>