force-app/main/default/objects/ConsolCNTR__c/fields/DETDuration__c.field-meta.xml
<CustomField>
    <fullName>DETDuration__c</fullName>
    <label>DET Duration</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>