force-app/main/default/objects/ConsolCNTR__c/fields/DETFreeTimeDurationdays__c.field-meta.xml
<CustomField>
    <fullName>DETFreeTimeDurationdays__c</fullName>
    <formula>Vendor__r.DETFreeTimeDurationdays__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DET-Free Time Duration (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>