force-app/main/default/objects/ConsolCNTR__c/fields/ETA__c.field-meta.xml
<CustomField>
    <fullName>ETA__c</fullName>
    <formula>AdvancedShipment__r.ETA__c</formula>
    <label>ETA</label>
    <type>Date</type>
</CustomField>