force-app/main/default/objects/ConsolCNTR__c/fields/FMS_S_O_3__c.field-meta.xml
<CustomField>
    <fullName>FMS_S_O_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FMS S/O 3</label>
    <referenceTo>FTMSSO__c</referenceTo>
    <relationshipName>Consol_CNTR2</relationshipName>
    <type>Lookup</type>
</CustomField>