force-app/main/default/objects/ConsolCNTR__c/fields/FTMSSOinAdvancedShipment__c.field-meta.xml
<CustomField>
    <fullName>FTMSSOinAdvancedShipment__c</fullName>
    <label>F/TMS S/O in Advanced Shipment</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>