force-app/main/default/objects/ConsolCNTR__c/fields/Full_or_Part_Mode__c.field-meta.xml
<CustomField>
    <fullName>Full_or_Part_Mode__c</fullName>
    <label>Full or Part Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>