force-app/main/default/objects/ConsolCNTR__c/fields/JobNo__c.field-meta.xml
<CustomField>
    <fullName>JobNo__c</fullName>
    <formula>AdvancedShipment__r.FileNo__c</formula>
    <label>Job No.</label>
    <type>Text</type>
</CustomField>