force-app/main/default/objects/ConsolCNTR__c/fields/Max_Gross_WeightKg__c.field-meta.xml
<CustomField>
    <fullName>Max_Gross_WeightKg__c</fullName>
    <label>Max Gross Weight(Kg)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>