force-app/main/default/objects/ConsolCNTR__c/fields/Net_WeightKg__c.field-meta.xml
<CustomField>
    <fullName>Net_WeightKg__c</fullName>
    <label>Net Weight(Kg)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>