force-app/main/default/objects/ConsolCNTR__c/fields/POD_AOA__c.field-meta.xml
<CustomField>
    <fullName>POD_AOA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>POD (AOA)</label>
    <referenceTo>PortCode__c</referenceTo>
    <relationshipName>Consol_CNTR1</relationshipName>
    <type>Lookup</type>
</CustomField>