force-app/main/default/objects/ConsolCNTR__c/fields/POL_AOD__c.field-meta.xml
<CustomField>
    <fullName>POL_AOD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>POL (AOD)</label>
    <referenceTo>PortCode__c</referenceTo>
    <relationshipName>Consol_CNTR</relationshipName>
    <type>Lookup</type>
</CustomField>