force-app/main/default/objects/ConsolCNTR__c/fields/Salesman__c.field-meta.xml
<CustomField>
    <fullName>Salesman__c</fullName>
    <formula>HYPERLINK( &quot;/&quot; &amp; CASESAFEID(AdvancedShipment__r.ShippingInformation__r.Quote_route__r.Route__r.Salesman__r.Id)
,AdvancedShipment__r.ShippingInformation__r.Quote_route__r.Route__r.Salesman__r.FirstName&amp;&quot; &quot;&amp;AdvancedShipment__r.ShippingInformation__r.Quote_route__r.Route__r.Salesman__r.LastName
, &quot;_self&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salesman</label>
    <type>Text</type>
</CustomField>