force-app/main/default/objects/ConsolCNTR__c/fields/ShipmentTerm__c.field-meta.xml
<CustomField>
    <fullName>ShipmentTerm__c</fullName>
    <formula>TEXT( AdvancedShipment__r.ShipmentTerm__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipment Term</label>
    <type>Text</type>
</CustomField>