force-app/main/default/objects/ConsolCNTR__c/fields/TCLHCMReturnEmptyDate__c.field-meta.xml
<CustomField>
    <fullName>TCLHCMReturnEmptyDate__c</fullName>
    <label>TCL HCM Return Empty Date</label>
    <type>Date</type>
</CustomField>