force-app/main/default/objects/ConsolCNTR__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <formula>text(AdvancedShipment__r.TypeofTrade__c)</formula>
    <label>Term</label>
    <type>Text</type>
</CustomField>