force-app/main/default/objects/ConsolCNTR__c/fields/Teus__c.field-meta.xml
<CustomField>
    <fullName>Teus__c</fullName>
    <label>Teus</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>