force-app/main/default/objects/ConsolCNTR__c/fields/TransportationWay__c.field-meta.xml
<CustomField>
    <fullName>TransportationWay__c</fullName>
    <formula>TEXT(AdvancedShipment__r.TransportationWay__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transportation Way</label>
    <type>Text</type>
</CustomField>