force-app/main/default/objects/ConsolCNTR__c/fields/Weighing_Company__c.field-meta.xml
<CustomField>
    <fullName>Weighing_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Weighing Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Consol_CNTR</relationshipName>
    <type>Lookup</type>
</CustomField>