force-app/main/default/objects/ConsolCNTR__c/fields/Weighing_Date__c.field-meta.xml
<CustomField>
    <fullName>Weighing_Date__c</fullName>
    <label>Weighing Date</label>
    <type>Date</type>
</CustomField>